// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StepProgress > renders at step 1/5 (nothing completed) 1`] = `
<div>
  <nav
    aria-label="Progresso"
    class="flex w-full items-start"
  >
    <div
      class="flex flex-1 flex-col items-center"
    >
      <div
        class="flex w-full items-center"
      >
        <div
          aria-current="step"
          aria-label="Identidade"
          class="relative z-10 flex shrink-0 items-center justify-center rounded-full transition-[background-color,box-shadow,color] duration-[280ms] ease-[var(--ease-in-out-precise)] h-8 w-8 text-xs font-medium bg-accent/15 text-accent shadow-glow"
          role="listitem"
        >
          <span
            class="font-metric tabular-nums"
          >
            1
          </span>
        </div>
        <div
          class="relative mx-1 h-px flex-1"
        >
          <div
            class="absolute inset-0 bg-hairline"
          />
          <div
            class="duration-[280ms] ease-[var(--ease-in-out-precise)] absolute inset-y-0 left-0 bg-success transition-[width]"
            style="width: 0%;"
          />
        </div>
      </div>
      <span
        class="duration-[280ms] ease-[var(--ease-in-out-precise)] mt-2 text-2xs font-medium transition-colors text-ink"
      >
        Identidade
      </span>
    </div>
    <div
      class="flex flex-1 flex-col items-center"
    >
      <div
        class="flex w-full items-center"
      >
        <div
          aria-label="Tom"
          class="relative z-10 flex shrink-0 items-center justify-center rounded-full transition-[background-color,box-shadow,color] duration-[280ms] ease-[var(--ease-in-out-precise)] h-8 w-8 text-xs font-medium bg-elevated text-ink-dim shadow-hairline"
          role="listitem"
        >
          <span
            class="font-metric tabular-nums"
          >
            2
          </span>
        </div>
        <div
          class="relative mx-1 h-px flex-1"
        >
          <div
            class="absolute inset-0 bg-hairline"
          />
          <div
            class="duration-[280ms] ease-[var(--ease-in-out-precise)] absolute inset-y-0 left-0 bg-success transition-[width]"
            style="width: 0%;"
          />
        </div>
      </div>
      <span
        class="duration-[280ms] ease-[var(--ease-in-out-precise)] mt-2 text-2xs font-medium transition-colors text-ink-dim"
      >
        Tom
      </span>
    </div>
    <div
      class="flex flex-1 flex-col items-center"
    >
      <div
        class="flex w-full items-center"
      >
        <div
          aria-label="Skills"
          class="relative z-10 flex shrink-0 items-center justify-center rounded-full transition-[background-color,box-shadow,color] duration-[280ms] ease-[var(--ease-in-out-precise)] h-8 w-8 text-xs font-medium bg-elevated text-ink-dim shadow-hairline"
          role="listitem"
        >
          <span
            class="font-metric tabular-nums"
          >
            3
          </span>
        </div>
        <div
          class="relative mx-1 h-px flex-1"
        >
          <div
            class="absolute inset-0 bg-hairline"
          />
          <div
            class="duration-[280ms] ease-[var(--ease-in-out-precise)] absolute inset-y-0 left-0 bg-success transition-[width]"
            style="width: 0%;"
          />
        </div>
      </div>
      <span
        class="duration-[280ms] ease-[var(--ease-in-out-precise)] mt-2 text-2xs font-medium transition-colors text-ink-dim"
      >
        Skills
      </span>
    </div>
    <div
      class="flex flex-1 flex-col items-center"
    >
      <div
        class="flex w-full items-center"
      >
        <div
          aria-label="Gatilho"
          class="relative z-10 flex shrink-0 items-center justify-center rounded-full transition-[background-color,box-shadow,color] duration-[280ms] ease-[var(--ease-in-out-precise)] h-8 w-8 text-xs font-medium bg-elevated text-ink-dim shadow-hairline"
          role="listitem"
        >
          <span
            class="font-metric tabular-nums"
          >
            4
          </span>
        </div>
        <div
          class="relative mx-1 h-px flex-1"
        >
          <div
            class="absolute inset-0 bg-hairline"
          />
          <div
            class="duration-[280ms] ease-[var(--ease-in-out-precise)] absolute inset-y-0 left-0 bg-success transition-[width]"
            style="width: 0%;"
          />
        </div>
      </div>
      <span
        class="duration-[280ms] ease-[var(--ease-in-out-precise)] mt-2 text-2xs font-medium transition-colors text-ink-dim"
      >
        Gatilho
      </span>
    </div>
    <div
      class="flex flex-col items-center flex-none"
    >
      <div
        class="flex items-center w-auto"
      >
        <div
          aria-label="Revisão"
          class="relative z-10 flex shrink-0 items-center justify-center rounded-full transition-[background-color,box-shadow,color] duration-[280ms] ease-[var(--ease-in-out-precise)] h-8 w-8 text-xs font-medium bg-elevated text-ink-dim shadow-hairline"
          role="listitem"
        >
          <span
            class="font-metric tabular-nums"
          >
            5
          </span>
        </div>
      </div>
      <span
        class="duration-[280ms] ease-[var(--ease-in-out-precise)] mt-2 text-2xs font-medium transition-colors text-ink-dim"
      >
        Revisão
      </span>
    </div>
  </nav>
</div>
`;

exports[`StepProgress > renders at step 3/5 with first two completed 1`] = `
<div>
  <nav
    aria-label="Progresso"
    class="flex w-full items-start"
  >
    <div
      class="flex flex-1 flex-col items-center"
    >
      <div
        class="flex w-full items-center"
      >
        <div
          aria-label="Identidade"
          class="relative z-10 flex shrink-0 items-center justify-center rounded-full transition-[background-color,box-shadow,color] duration-[280ms] ease-[var(--ease-in-out-precise)] h-8 w-8 text-xs font-medium bg-success/15 text-success shadow-[inset_0_0_0_1px_hsl(var(--success)/0.4)]"
          role="listitem"
        >
          <svg
            class="lucide lucide-check h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.75"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
        <div
          class="relative mx-1 h-px flex-1"
        >
          <div
            class="absolute inset-0 bg-hairline"
          />
          <div
            class="duration-[280ms] ease-[var(--ease-in-out-precise)] absolute inset-y-0 left-0 bg-success transition-[width]"
            style="width: 100%;"
          />
        </div>
      </div>
      <span
        class="duration-[280ms] ease-[var(--ease-in-out-precise)] mt-2 text-2xs font-medium transition-colors text-success"
      >
        Identidade
      </span>
    </div>
    <div
      class="flex flex-1 flex-col items-center"
    >
      <div
        class="flex w-full items-center"
      >
        <div
          aria-label="Tom"
          class="relative z-10 flex shrink-0 items-center justify-center rounded-full transition-[background-color,box-shadow,color] duration-[280ms] ease-[var(--ease-in-out-precise)] h-8 w-8 text-xs font-medium bg-success/15 text-success shadow-[inset_0_0_0_1px_hsl(var(--success)/0.4)]"
          role="listitem"
        >
          <svg
            class="lucide lucide-check h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.75"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
        <div
          class="relative mx-1 h-px flex-1"
        >
          <div
            class="absolute inset-0 bg-hairline"
          />
          <div
            class="duration-[280ms] ease-[var(--ease-in-out-precise)] absolute inset-y-0 left-0 bg-success transition-[width]"
            style="width: 100%;"
          />
        </div>
      </div>
      <span
        class="duration-[280ms] ease-[var(--ease-in-out-precise)] mt-2 text-2xs font-medium transition-colors text-success"
      >
        Tom
      </span>
    </div>
    <div
      class="flex flex-1 flex-col items-center"
    >
      <div
        class="flex w-full items-center"
      >
        <div
          aria-current="step"
          aria-label="Skills"
          class="relative z-10 flex shrink-0 items-center justify-center rounded-full transition-[background-color,box-shadow,color] duration-[280ms] ease-[var(--ease-in-out-precise)] h-8 w-8 text-xs font-medium bg-accent/15 text-accent shadow-glow"
          role="listitem"
        >
          <span
            class="font-metric tabular-nums"
          >
            3
          </span>
        </div>
        <div
          class="relative mx-1 h-px flex-1"
        >
          <div
            class="absolute inset-0 bg-hairline"
          />
          <div
            class="duration-[280ms] ease-[var(--ease-in-out-precise)] absolute inset-y-0 left-0 bg-success transition-[width]"
            style="width: 0%;"
          />
        </div>
      </div>
      <span
        class="duration-[280ms] ease-[var(--ease-in-out-precise)] mt-2 text-2xs font-medium transition-colors text-ink"
      >
        Skills
      </span>
    </div>
    <div
      class="flex flex-1 flex-col items-center"
    >
      <div
        class="flex w-full items-center"
      >
        <div
          aria-label="Gatilho"
          class="relative z-10 flex shrink-0 items-center justify-center rounded-full transition-[background-color,box-shadow,color] duration-[280ms] ease-[var(--ease-in-out-precise)] h-8 w-8 text-xs font-medium bg-elevated text-ink-dim shadow-hairline"
          role="listitem"
        >
          <span
            class="font-metric tabular-nums"
          >
            4
          </span>
        </div>
        <div
          class="relative mx-1 h-px flex-1"
        >
          <div
            class="absolute inset-0 bg-hairline"
          />
          <div
            class="duration-[280ms] ease-[var(--ease-in-out-precise)] absolute inset-y-0 left-0 bg-success transition-[width]"
            style="width: 0%;"
          />
        </div>
      </div>
      <span
        class="duration-[280ms] ease-[var(--ease-in-out-precise)] mt-2 text-2xs font-medium transition-colors text-ink-dim"
      >
        Gatilho
      </span>
    </div>
    <div
      class="flex flex-col items-center flex-none"
    >
      <div
        class="flex items-center w-auto"
      >
        <div
          aria-label="Revisão"
          class="relative z-10 flex shrink-0 items-center justify-center rounded-full transition-[background-color,box-shadow,color] duration-[280ms] ease-[var(--ease-in-out-precise)] h-8 w-8 text-xs font-medium bg-elevated text-ink-dim shadow-hairline"
          role="listitem"
        >
          <span
            class="font-metric tabular-nums"
          >
            5
          </span>
        </div>
      </div>
      <span
        class="duration-[280ms] ease-[var(--ease-in-out-precise)] mt-2 text-2xs font-medium transition-colors text-ink-dim"
      >
        Revisão
      </span>
    </div>
  </nav>
</div>
`;

exports[`StepProgress > renders at step 5/5 all completed 1`] = `
<div>
  <nav
    aria-label="Progresso"
    class="flex w-full items-start"
  >
    <div
      class="flex flex-1 flex-col items-center"
    >
      <div
        class="flex w-full items-center"
      >
        <div
          aria-label="Identidade"
          class="relative z-10 flex shrink-0 items-center justify-center rounded-full transition-[background-color,box-shadow,color] duration-[280ms] ease-[var(--ease-in-out-precise)] h-8 w-8 text-xs font-medium bg-success/15 text-success shadow-[inset_0_0_0_1px_hsl(var(--success)/0.4)]"
          role="listitem"
        >
          <svg
            class="lucide lucide-check h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.75"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
        <div
          class="relative mx-1 h-px flex-1"
        >
          <div
            class="absolute inset-0 bg-hairline"
          />
          <div
            class="duration-[280ms] ease-[var(--ease-in-out-precise)] absolute inset-y-0 left-0 bg-success transition-[width]"
            style="width: 100%;"
          />
        </div>
      </div>
      <span
        class="duration-[280ms] ease-[var(--ease-in-out-precise)] mt-2 text-2xs font-medium transition-colors text-success"
      >
        Identidade
      </span>
    </div>
    <div
      class="flex flex-1 flex-col items-center"
    >
      <div
        class="flex w-full items-center"
      >
        <div
          aria-label="Tom"
          class="relative z-10 flex shrink-0 items-center justify-center rounded-full transition-[background-color,box-shadow,color] duration-[280ms] ease-[var(--ease-in-out-precise)] h-8 w-8 text-xs font-medium bg-success/15 text-success shadow-[inset_0_0_0_1px_hsl(var(--success)/0.4)]"
          role="listitem"
        >
          <svg
            class="lucide lucide-check h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.75"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
        <div
          class="relative mx-1 h-px flex-1"
        >
          <div
            class="absolute inset-0 bg-hairline"
          />
          <div
            class="duration-[280ms] ease-[var(--ease-in-out-precise)] absolute inset-y-0 left-0 bg-success transition-[width]"
            style="width: 100%;"
          />
        </div>
      </div>
      <span
        class="duration-[280ms] ease-[var(--ease-in-out-precise)] mt-2 text-2xs font-medium transition-colors text-success"
      >
        Tom
      </span>
    </div>
    <div
      class="flex flex-1 flex-col items-center"
    >
      <div
        class="flex w-full items-center"
      >
        <div
          aria-label="Skills"
          class="relative z-10 flex shrink-0 items-center justify-center rounded-full transition-[background-color,box-shadow,color] duration-[280ms] ease-[var(--ease-in-out-precise)] h-8 w-8 text-xs font-medium bg-success/15 text-success shadow-[inset_0_0_0_1px_hsl(var(--success)/0.4)]"
          role="listitem"
        >
          <svg
            class="lucide lucide-check h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.75"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
        <div
          class="relative mx-1 h-px flex-1"
        >
          <div
            class="absolute inset-0 bg-hairline"
          />
          <div
            class="duration-[280ms] ease-[var(--ease-in-out-precise)] absolute inset-y-0 left-0 bg-success transition-[width]"
            style="width: 100%;"
          />
        </div>
      </div>
      <span
        class="duration-[280ms] ease-[var(--ease-in-out-precise)] mt-2 text-2xs font-medium transition-colors text-success"
      >
        Skills
      </span>
    </div>
    <div
      class="flex flex-1 flex-col items-center"
    >
      <div
        class="flex w-full items-center"
      >
        <div
          aria-label="Gatilho"
          class="relative z-10 flex shrink-0 items-center justify-center rounded-full transition-[background-color,box-shadow,color] duration-[280ms] ease-[var(--ease-in-out-precise)] h-8 w-8 text-xs font-medium bg-success/15 text-success shadow-[inset_0_0_0_1px_hsl(var(--success)/0.4)]"
          role="listitem"
        >
          <svg
            class="lucide lucide-check h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.75"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
        <div
          class="relative mx-1 h-px flex-1"
        >
          <div
            class="absolute inset-0 bg-hairline"
          />
          <div
            class="duration-[280ms] ease-[var(--ease-in-out-precise)] absolute inset-y-0 left-0 bg-success transition-[width]"
            style="width: 100%;"
          />
        </div>
      </div>
      <span
        class="duration-[280ms] ease-[var(--ease-in-out-precise)] mt-2 text-2xs font-medium transition-colors text-success"
      >
        Gatilho
      </span>
    </div>
    <div
      class="flex flex-col items-center flex-none"
    >
      <div
        class="flex items-center w-auto"
      >
        <div
          aria-current="step"
          aria-label="Revisão"
          class="relative z-10 flex shrink-0 items-center justify-center rounded-full transition-[background-color,box-shadow,color] duration-[280ms] ease-[var(--ease-in-out-precise)] h-8 w-8 text-xs font-medium bg-accent/15 text-accent shadow-glow"
          role="listitem"
        >
          <span
            class="font-metric tabular-nums"
          >
            5
          </span>
        </div>
      </div>
      <span
        class="duration-[280ms] ease-[var(--ease-in-out-precise)] mt-2 text-2xs font-medium transition-colors text-ink"
      >
        Revisão
      </span>
    </div>
  </nav>
</div>
`;

exports[`StepProgress > renders minimal variant 1`] = `
<div>
  <nav
    aria-label="Progresso"
    class="flex w-full items-center"
  >
    <div
      class="flex flex-1 items-center"
    >
      <div
        class="flex w-full items-center"
      >
        <div
          aria-label="Identidade"
          class="relative z-10 flex shrink-0 items-center justify-center rounded-full transition-[background-color,box-shadow,color] duration-[280ms] ease-[var(--ease-in-out-precise)] h-2.5 w-2.5 text-success bg-success shadow-none"
          role="listitem"
        />
        <div
          class="relative mx-1 h-px flex-1"
        >
          <div
            class="absolute inset-0 bg-hairline"
          />
          <div
            class="duration-[280ms] ease-[var(--ease-in-out-precise)] absolute inset-y-0 left-0 bg-success transition-[width]"
            style="width: 100%;"
          />
        </div>
      </div>
    </div>
    <div
      class="flex flex-1 items-center"
    >
      <div
        class="flex w-full items-center"
      >
        <div
          aria-label="Tom"
          class="relative z-10 flex shrink-0 items-center justify-center rounded-full transition-[background-color,box-shadow,color] duration-[280ms] ease-[var(--ease-in-out-precise)] h-2.5 w-2.5 text-success bg-success shadow-none"
          role="listitem"
        />
        <div
          class="relative mx-1 h-px flex-1"
        >
          <div
            class="absolute inset-0 bg-hairline"
          />
          <div
            class="duration-[280ms] ease-[var(--ease-in-out-precise)] absolute inset-y-0 left-0 bg-success transition-[width]"
            style="width: 100%;"
          />
        </div>
      </div>
    </div>
    <div
      class="flex flex-1 items-center"
    >
      <div
        class="flex w-full items-center"
      >
        <div
          aria-current="step"
          aria-label="Skills"
          class="relative z-10 flex shrink-0 items-center justify-center rounded-full transition-[background-color,box-shadow,color] duration-[280ms] ease-[var(--ease-in-out-precise)] h-2.5 w-2.5 text-accent bg-accent shadow-glow"
          role="listitem"
        />
        <div
          class="relative mx-1 h-px flex-1"
        >
          <div
            class="absolute inset-0 bg-hairline"
          />
          <div
            class="duration-[280ms] ease-[var(--ease-in-out-precise)] absolute inset-y-0 left-0 bg-success transition-[width]"
            style="width: 0%;"
          />
        </div>
      </div>
    </div>
    <div
      class="flex flex-1 items-center"
    >
      <div
        class="flex w-full items-center"
      >
        <div
          aria-label="Gatilho"
          class="relative z-10 flex shrink-0 items-center justify-center rounded-full transition-[background-color,box-shadow,color] duration-[280ms] ease-[var(--ease-in-out-precise)] h-2.5 w-2.5 text-ink-dim shadow-hairline bg-ink-dim/30 shadow-none"
          role="listitem"
        />
        <div
          class="relative mx-1 h-px flex-1"
        >
          <div
            class="absolute inset-0 bg-hairline"
          />
          <div
            class="duration-[280ms] ease-[var(--ease-in-out-precise)] absolute inset-y-0 left-0 bg-success transition-[width]"
            style="width: 0%;"
          />
        </div>
      </div>
    </div>
    <div
      class="flex items-center flex-none"
    >
      <div
        class="flex items-center w-auto"
      >
        <div
          aria-label="Revisão"
          class="relative z-10 flex shrink-0 items-center justify-center rounded-full transition-[background-color,box-shadow,color] duration-[280ms] ease-[var(--ease-in-out-precise)] h-2.5 w-2.5 text-ink-dim shadow-hairline bg-ink-dim/30 shadow-none"
          role="listitem"
        />
      </div>
    </div>
  </nav>
</div>
`;
